<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/header_background"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@color/light_yellow"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/profile_icon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_profile"
        android:background="@drawable/circle_background"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp" />


    <LinearLayout
        android:id="@+id/date_section"
        android:layout_width="330dp"
        android:layout_height="55dp"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="47dp">

        <Button
            android:id="@+id/month_button"
            android:layout_width="115dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_bg"
            android:text="@string/mar"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/day_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:background="@drawable/button_bg"
            android:text="@string/_22"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/year_button"
            android:layout_width="111dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:background="@drawable/button_bg"
            android:text="@string/_2025"
            android:textColor="@color/black" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/tab_section"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="@color/white"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@id/date_section">

        <TextView
            android:id="@+id/smart_summary"
            android:layout_width="137dp"
            android:layout_height="wrap_content"
            android:text="@string/smart_summary"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/day_logs"
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/day_logs"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/calendar_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/pet_live_location"
            android:textColor="@color/gray"
            android:textSize="16sp" />
    </LinearLayout>


    <TextView
        android:id="@+id/summaryTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="188dp"
        android:text="@string/pet_health_summary"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/locationText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="28dp"
        android:text="@string/location_park"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/heartRateProgressBar" />

    <TextView
        android:id="@+id/alertText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="20dp"
        android:text="@string/alert_pet_needs_rest"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/locationText" />

    <TextView
        android:id="@+id/temperatureText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="12dp"
        android:text="@string/temperature_38_c"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/stepsText" />

    <ProgressBar
        android:id="@+id/heartRateProgressBar"
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:layout_width="364dp"
        android:layout_height="23dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:max="200"
        android:progress="85"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/temperatureText" />

    <TextView
        android:id="@+id/stepsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="12dp"
        android:text="@string/steps_1200"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/heartRateText" />

    <TextView
        android:id="@+id/heartRateText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="48dp"
        android:text="@string/heart_rate_85_bpm"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/summaryTitle" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/bottom_nav_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>
