<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/header_background"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@color/light_yellow"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/profile_icon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_profile"
        android:background="@drawable/circle_background"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp" />

    <!-- Tabs Section -->
    <LinearLayout
        android:id="@+id/date_section"
        android:layout_width="330dp"
        android:layout_height="55dp"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="47dp">

        <Button
            android:id="@+id/month_button"
            android:layout_width="115dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_bg"
            android:text="@string/mar"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/day_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:background="@drawable/button_bg"
            android:text="@string/_22"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/year_button"
            android:layout_width="111dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:background="@drawable/button_bg"
            android:text="@string/_2025"
            android:textColor="@color/black" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/tab_section"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="@color/white"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@id/date_section">

        <TextView
            android:id="@+id/smart_summary"
            android:layout_width="137dp"
            android:layout_height="wrap_content"
            android:text="@string/smart_summary"
            android:textColor="@color/gray"
            android:textSize="16sp"
             />

        <TextView
            android:id="@+id/day_logs"
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/day_logs"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/calendar_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/pet_live_location"
            android:textColor="@color/gray"
            android:textSize="16sp" />
    </LinearLayout>




    <android.widget.CalendarView
        android:id="@+id/calendarView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/selectedDateText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selected_date"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/calendarView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="20dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
