<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_yellow"
    tools:context=".RegistrationActivity">

    <ImageView
        android:id="@+id/back_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_back"
        android:padding="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp" />
<EditText
    android:id="@+id/name_input"
    android:layout_width="0dp"
    android:layout_height="59dp"
    android:layout_marginStart="16dp"
    android:layout_marginTop="120dp"
    android:layout_marginEnd="16dp"
    android:hint="@string/full_name"
    android:textColor="@color/black"
    android:textColorHint="@color/gray"
    android:inputType="textPersonName"
    android:background="@drawable/edittext_bg"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />


<EditText
    android:id="@+id/email_input"
    android:layout_width="0dp"
    android:layout_height="59dp"
    android:layout_marginStart="16dp"
    android:layout_marginTop="28dp"
    android:layout_marginEnd="16dp"
    android:hint="@string/email_"
    android:textColor="@color/black"
    android:textColorHint="@color/gray"
    android:inputType="textEmailAddress"
    android:background="@drawable/edittext_bg"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/name_input" />


<EditText
    android:id="@+id/password_input"
    android:layout_width="0dp"
    android:layout_height="59dp"
    android:layout_marginStart="16dp"
    android:layout_marginTop="28dp"
    android:layout_marginEnd="16dp"
    android:hint="@string/password_"
    android:textColor="@color/black"
    android:textColorHint="@color/gray"
    android:inputType="textPassword"
    android:background="@drawable/edittext_bg"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/email_input" />


<EditText
    android:id="@+id/confirm_password_input"
    android:layout_width="0dp"
    android:layout_height="59dp"
    android:layout_marginStart="16dp"
    android:layout_marginTop="28dp"
    android:layout_marginEnd="16dp"
    android:hint="@string/confirm_password"
    android:textColor="@color/black"
    android:textColorHint="@color/gray"
    android:inputType="textPassword"
    android:background="@drawable/edittext_bg"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/password_input" />


    <Button
        android:id="@+id/register_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@color/yellow"
        android:text="@string/register"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/confirm_password_input" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.086" />

</androidx.constraintlayout.widget.ConstraintLayout>
